{{$NEXT}}

- The stack trace contained by Specio::Exception objects no longer includes a
  stack frames for the Specio::Exception package.


0.30     2016-10-15

- Fix a bug with the Sub::Quoted sub returned by $type->coercion_sub. If a
  type had more than one coercion, the generated sub could end up coercing the
  value to undef some of the time. Depending on hash key ordering, this could
  end up being a heisenbug that only occured some of the time.


0.29     2016-10-09

- Doc Specio::PartialDump because you may want to use it as part of the
  failure message generation code for a type.


0.28     2016-10-02

- Added a Test::Specio module to provide helpers for testing Specio libraries.

- Fixed another bug with a subtype of special types and inlining.


0.27     2016-10-01

- Cloning a type with coercions defined on it would cause an exception.

- Creating a subtype of a special type created by *_isa_type, *_can_type, or
  *_does_type, or enum would die when trying to inline the type constraint.

- Removed the never-documented Any type.

- Added documentation for each type in Specio::Library::Builtins.


0.26     2016-09-24

- Require Role::Tiny 1.003003. This should fix the test failures some
  CPANTesters reported with this error:

    Can't resolve method "???" overloading "&{}" in package
    "Specio::Constraint::Simple" at Specio::Constraint::Simple->new line 35.


0.25     2016-09-04

- Calling {any,object}_{isa,does}_type repeatedly in a package with the same
  class or role name would die. These subs are now special-cased to simply
  return an existing type for the given name when they receive a single
  argument (the name of the class or role). This could come up if you had two
  attributes both of which required an object of the same type.


0.24     2016-06-20

- Fix a bizarre failure on Perl before 5.14. AFAICT this was a test problem,
  not a library problem.


0.23     2016-06-20

- Added intersection types.


0.22     2016-06-18
